Thien - add Sign up social feature

--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -43,10 +43,10 @@
           LOGIN
         </div>
         <div class="col-md-7 mr-0 icon-align">
-          <a href="#">
+          <a (click)="signInWithGoogle()">
             <i class="fa fa-2x fa-google float-md-right mr-3 bg-light p-1 text-center" aria-hidden="true"></i>
           </a>
-          <a href="#">
+          <a (click)="signInWithFB()">
             <i class="fa fa-2x fa-facebook float-md-right mr-3 bg-light p-1 text-center" aria-hidden="true"></i>
           </a>
         </div>
