--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -12,14 +12,17 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body p-2">User:
-            <div class="username-card">{{username}}</div>
+            <div class="username-card">{{ username }}</div>
           </div>
         </div>
       </div>
       <div class="col-md-12">
         <div class="card">
           <div class="card-body p-2">Information:
-            <div class="username-card">{{roles}}</div>
+            <div class="username-card">{{ roles }}</div>
+            <div *ngIf="socialUser">
+              <div class="username-card">{{ socialUser.email }}</div>
+            </div>
           </div>
         </div>
       </div>
@@ -86,5 +89,3 @@
     </form>
   </div>
 </ng-template>
-
-
