--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -13,6 +13,7 @@
         <div class="card">
           <div class="card-body p-2">User:
             <div class="username-card">{{ username }}</div>
+            <img src="{{ avatar }}" class="ml-4 my-2 rounded shadow" alt="avatar.jpg">
           </div>
         </div>
       </div>
@@ -24,11 +25,6 @@
           <div *ngIf="isLoggedIn">
             <div class="card-body p-2">Email:
               <div class="username-card">{{ email }}</div>
-            </div>
-            <div class="card-body p-2">Avatar:
-              <div class="username-card">
-                <img src="{{ avatar }}" alt="avatar.jpg">
-              </div>
             </div>
           </div>
         </div>
@@ -53,10 +49,10 @@
           LOGIN
         </div>
         <div class="col-md-7 mr-0 icon-align">
-          <a (click)="signInWithGoogle()">
+          <a (click)="loginSocial('gg')">
             <i class="fa fa-2x fa-google float-md-right mr-3 bg-light p-1 text-center" aria-hidden="true"></i>
           </a>
-          <a (click)="signInWithFB()">
+          <a (click)="loginSocial('fb')">
             <i class="fa fa-2x fa-facebook float-md-right mr-3 bg-light p-1 text-center" aria-hidden="true"></i>
           </a>
         </div>
