--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -32,6 +32,7 @@
     </div>
     <div class="form-group row mt-4">
       <div class="col-md-12 d-flex justify-content-center flex-column align-items-center">
+        <button class="btn rounded" routerLink="detail-user">Information</button>
         <button class="btn rounded" (click)="logOut()">Log out</button>
       </div>
     </div>
@@ -88,7 +89,7 @@
             </label>
           </div>
           <button type="submit" class="btn rounded mr-3 mt-3" [disabled]="loginForm.invalid">Sign in</button>
-          <button class="btn rounded mt-3">Register</button>      
+          <button class="btn rounded mt-3">Register</button>
           <div *ngIf="loginForm.dirty && isLogInFailed" class="alert alert-danger p-1 mt-2">
             Account doesn't exist !
           </div>
