--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -16,29 +16,34 @@
           <!--question-->
           <b><span>Q {{i + 1}}: </span></b><b><span>{{question.question}}</span></b><br>
           <!--answer-->
-          <i id="Q{{i+1}}A" ng-class="{{listAnswer[i]}}=={{question.answerA}}?'fa-check':'fa-times'"
-             ng-class="{{listAnswer[i]}}=={{question.rightAnswer}}?'allCheckQ':''"
-             class="fa "></i>
-          <input id="Cau{{question.questionId}}A" [name]="question.questionId" type="radio"
-                 value="{{question.answerA}}" disabled><label for="Cau{{question.questionId}}A">{{question.answerA}}</label>
+          <div *ngIf="isAnswerA(i); then thenBlock else elseBlock"></div>
+          <ng-template #thenBlock><i id="I{{i+1}}A" class="fa fa-check "></i></ng-template>
+          <ng-template #elseBlock><i id="II{{i+1}}A" class="fa fa-times"></i></ng-template>
+
+          <input id="Cau{{question.questionId}}A" name="{{question.questionId}}" type="radio"
+                 value="{{question.answerA}}" disabled><label
+          for="Cau{{question.questionId}}A" id="C{{question.questionId}}A">{{question.answerA}}</label>
           <br/>
-          <i id="Q{{i+1}}B" ng-class="{{listAnswer[i]}}=={{question.answerB}}?'fa-check':'fa-times'"
-             ng-class="{{listAnswer[i]}}=={{question.rightAnswer}}?'allCheckQ':''"
-             class="fa allCheckQ"></i>
-          <input id="Cau{{question.questionId}}B" [name]="question.questionId" type="radio"
-                 value="{{question.answerB}}" disabled><label for="Cau{{question.questionId}}B">{{question.answerB}}</label>
+          <div *ngIf="isAnswerB(i); then thenBlock else elseBlock"></div>
+          <ng-template #thenBlock><i id="I{{i+1}}B" class="fa fa-check " ></i></ng-template>
+          <ng-template #elseBlock><i id="II{{i+1}}B" class="fa fa-times "></i></ng-template>
+          <input id="Cau{{question.questionId}}B" name="{{question.questionId}}" type="radio"
+                 value="{{question.answerB}}" disabled><label
+          for="Cau{{question.questionId}}B" id="C{{question.questionId}}B">{{question.answerB}}</label>
           <br/>
-          <i id="Q{{i+1}}C" ng-class="{{listAnswer[i]}}=={{question.answerB}}?'fa-check':'fa-times'"
-             ng-class="{{listAnswer[i]}}=={{question.rightAnswer}}?'allCheckQ':''"
-             class="fa allCheckQ"></i>
-          <input id="Cau{{question.questionId}}C" [name]="question.questionId" type="radio"
-                 value="{{question.answerC}}" disabled><label for="Cau{{question.questionId}}C">{{question.answerC}}</label>
+          <div *ngIf="isAnswerC(i); then thenBlock else elseBlock"></div>
+          <ng-template #thenBlock><i id="I{{i+1}}C" class="fa fa-check "></i></ng-template>
+          <ng-template #elseBlock><i id="II{{i+1}}C" class="fa fa-times "></i></ng-template>
+          <input id="Cau{{question.questionId}}C" name="{{question.questionId}}" type="radio"
+                 value="{{question.answerC}}" disabled><label
+          for="Cau{{question.questionId}}C" id="C{{question.questionId}}C">{{question.answerC}}</label>
           <br/>
-          <i id="Q{{i+1}}D" ng-class="{{listAnswer[i]}}=={{question.answerD}}?'fa-check':'fa-times'"
-             ng-class="{{listAnswer[i]}}=={{question.rightAnswer}}?'allCheckQ':''"
-             class="fa allCheckQ"></i>
-          <input id="Cau{{question.questionId}}D" [name]="question.questionId" type="radio"
-                 value="{{question.answerD}}" disabled><label for="Cau{{question.questionId}}D">{{question.answerD}}</label>
+          <div *ngIf="isAnswerD(i); then thenBlock else elseBlock"></div>
+          <ng-template #thenBlock><i id="I{{i+1}}D" class="fa fa-check "></i></ng-template>
+          <ng-template #elseBlock><i id="II{{i+1}}D" class="fa fa-times "></i></ng-template>
+          <input id="Cau{{question.questionId}}D" name="{{question.questionId}}" type="radio"
+                 value="{{question.answerD}}" disabled><label
+          for="Cau{{question.questionId}}D" id="C{{question.questionId}}D">{{question.answerD}}</label>
           <br/><br/>
         </td>
       </tr>
