--- a/project/FE/src/app/user/statistical-user/statistical-user.component.html
+++ b/project/FE/src/app/user/statistical-user/statistical-user.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="card">
       <div class="card-body p-2">Newest
-        <span class="badge badge-pill badge-secondary float-right mt-1">{{user.username}}</span>
+        <span class="badge badge-pill badge-secondary float-right mt-1" >{{nameUser}}</span>
       </div>
     </div>
   </div>
