--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -37,14 +37,14 @@
               <th scope="col" colspan="2">Action</th>
             </tr>
             </thead>
-            <tbody class="bg-light">
-            <tr *ngFor="let user of userList | paginate: {itemsPerPage: 10, currentPage: p}; let i = index">
+            <tbody *ngIf="userList && userList[0]" class="bg-light">
+            <tr  *ngFor="let user of userList | paginate: {itemsPerPage: 10, currentPage: p}; let i = index">
               <th scope="row">{{i+1}}</th>
               <td>{{user.username}}</td>
               <td>{{user.fullName}}</td>
               <td>{{user.address}}</td>
               <td>{{user.phoneNumber}}</td>
-<!--              <td>{{user.}}</td>-->
+              <td>{{getTotalTime(user)}}</td>
               <td>
                 <a href="#">
                   <i class="fa fa-pencil" aria-hidden="true"></i>
