--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -44,7 +44,7 @@
               <td>{{user.fullName}}</td>
               <td>{{user.address}}</td>
               <td>{{user.phoneNumber}}</td>
-              <td>{{getTotalTime(user)}}</td>
+              <td>{{getTotalPoint(user)}} / {{getTotalTime(user)}}</td>
               <td>
                 <a href="#">
                   <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -84,6 +84,22 @@
             </tr>
             </tbody>
           </table>
+          <div class="modal fade bd-example-modal-lg" id="deletedStatus" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <span id="message"></span>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                    <a class="text-white" [routerLink]="'list-user'">
+                      Close
+                    </a>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
           <pagination-controls (pageChange)="p = $event"></pagination-controls>
           <div class="col-md-12 d-flex justify-content-md-end mb-3">
             <button id="closeButton" class="btn btn-outline-secondary align-self-end">
