phuong fix icon ok

--- a/project/FE/src/app/exam/get-exam/get-exam.component.css
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.css
@@ -69,11 +69,11 @@ ul {
 }
 
 .fa-times{
-  visibility: visible;
+  visibility: hidden;
 }
 
 .fa-check{
-  visibility: visible;
+  visibility: hidden;
 }
 
 
