--- a/project/FE/src/app/error-page/error-page.component.html
+++ b/project/FE/src/app/error-page/error-page.component.html
@@ -1,1 +1,1 @@
-<div class="ml-5 text-danger">Please choose another topic, the data is updating!</div>
+<div class="pl-5 pt-5 border-top text-danger">Please choose another topic, the data is updating!</div>
