--- a/project/FE/src/app/question/add-question/add-question.component.html
+++ b/project/FE/src/app/question/add-question/add-question.component.html
@@ -88,7 +88,7 @@
           </div>
           </div>
         </li>
-
+        <li class="list-inline mt-2 ml-5 text-danger" *ngIf="formQuestion.get('testCodeList').hasError('required') && formQuestion.get('testCodeList').touched">* Enter test please</li>
         <li class="list-inline mt-4" style="margin-left: 150px">
           <div>
             <button (click)="addQuestion()" [disabled]="formQuestion.invalid" class="btn btn-sm  rounded border"  type="submit" >Submit</button>
