--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -44,7 +44,7 @@
               <td>{{user.fullName}}</td>
               <td>{{user.address}}</td>
               <td>{{user.phoneNumber}}</td>
-              <td>{{getTotalPoint(user)}} / {{getTotalTime(user)}}</td>
+              <td>{{userService.getTotalPoint(user)}} / {{userService.getTotalTime(user)}}</td>
               <td>
                 <a href="#">
                   <i class="fa fa-pencil" aria-hidden="true"></i>
