--- a/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
+++ b/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
@@ -87,8 +87,9 @@
 
             <div class="col-xs-12 col-sm-6 col-md-2">
 
-              <button data-toggle="collapse" data-target="#emoji" type="button"
-                      class="btn bg-import-file btn-secondary mb-5 submit-import ">Import question
+              <button type="button"
+                      class="submit-import ">
+                <input type="file" accept=".txt" btn-import  (change)="selectFile($event)" class="custom-file-input" for="import">
               </button>
 
             </div>
@@ -103,6 +104,6 @@
     </div>
   </div>
 </div>
-<input type="file" accept=".txt"  (change)="selectFile($event)" class="custom-file-input" for="import">
+
 
 
