--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -103,6 +103,7 @@
     <!-- // -->
 
     <!-- CENTER COLLUMN -->
+    <router-outlet></router-outlet>
 
     <div class="col-md-6">
       <!--            Content-->
@@ -190,5 +191,6 @@
     </div>
   </div>
 </div>
+
 
 
