--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -32,7 +32,7 @@
     </div>
     <div class="form-group row mt-4">
       <div class="col-md-12 d-flex justify-content-center flex-column align-items-center">
-        <button class="btn rounded" routerLink="detail-user">Information</button>
+        <a class="btn rounded" [routerLink]="['detail-user']">Information</a>
         <button class="btn rounded" (click)="logOut()">Log out</button>
       </div>
     </div>
