Thien - remake default page

--- a/project/FE/src/app/login/components/auth-login/auth-login.component.css
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.css
@@ -45,4 +45,9 @@
   background: linear-gradient(0deg, rgb(228, 223, 223) 0%, rgb(248, 248, 248) 35%);
   border: 1px solid rgb(199, 197, 197);
 }
+
+.avt {
+  width: 40%;
+  margin-left: 30%;
+}
 /* ////////////// */
