chau update phan quyen fe

--- a/project/FE/src/app/question/question-list-in-the-exam/question-list-in-the-exam.component.html
+++ b/project/FE/src/app/question/question-list-in-the-exam/question-list-in-the-exam.component.html
@@ -51,7 +51,7 @@
                       class="btn bg-btn btn-primary mb-3">Delete
               </button>
               <button type="button"  type="button" data-target="#notification"
-                      class="btn bg-btn btn-primary mb-3">Close
+                      class="btn bg-btn btn-primary mb-3" (click)="close()">Close
               </button>
             </div>
 
