--- a/project/FE/src/app/question/add-question-in-exam/add-question-in-exam.component.html
+++ b/project/FE/src/app/question/add-question-in-exam/add-question-in-exam.component.html
@@ -49,7 +49,7 @@
               </div>
 
               <div id="notification" class="collapse errors">
-                Error : have not built functions yet !
+
               </div>
             </div>
 
@@ -63,7 +63,7 @@
               </button>
 
               <button type="button" data-toggle="collapse" data-target="#notification"
-                      class="btn bg-btn btn-primary mb-3">Close
+                      class="btn bg-btn btn-primary mb-3" (click)="close()">Close
               </button>
             </div>
 
