--- a/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
+++ b/project/FE/src/app/question/question-bank-list/question-bank-list.component.html
@@ -44,7 +44,7 @@
             </td>
             <td class="text-left">{{questionList.rightAnswer}}</td>
             <td>
-              <a [routerLink]="['question-delete', questionList.questionId]">Del</a>
+              <a [routerLink]="['/delete-question-bank', questionList.questionId]">Del</a>
               <a [routerLink]="['update-question/' + questionList.questionId]" >Edit</a>
             </td>
           </tr>
@@ -56,10 +56,7 @@
           <div class="row ">
             <div class="col-xs-12 col-sm-6 col-md-3">
               <div id="emoji" class="collapse">
-<!--                <input type="file" accept=".txt" (change)="selectFile($event)" class="custom-file-input">-->
-<!--                <button data-toggle="collapse" type="button" data-target="#notification"-->
-<!--                        class="btn bg-btn btn-primary mt-3">Upload-->
-<!--                </button>-->
+
               </div>
 
               <div id="notification" class="collapse errors">
@@ -77,7 +74,7 @@
               </button>
 
               <button type="button" data-toggle="collapse" data-target="#notification"
-                      class="btn bg-btn btn-primary mb-3">Close
+                      class="btn bg-btn btn-primary mb-3" (click)="close()">Close
               </button>
             </div>
 
