--- a/project/FE/src/app/test/add-test/add-test.component.html
+++ b/project/FE/src/app/test/add-test/add-test.component.html
@@ -2,6 +2,13 @@
   <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
+      <div class="col-md-10">
+        <div class="row">
+          <div class="col-md-12 message-bg mt-4">
+            <span id="message" *ngIf="message" class="d-flex align-items-center message-bg">{{message}}</span>
+          </div>
+        </div>
+      </div>
       <form *ngIf="formAddTest" [formGroup]="formAddTest" (ngSubmit)="addTest()"
             class="table table-bordered custom form-border mt-2">
         <div class="header d-flex flex-column p-1 header-border">
