--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -1,4 +1,4 @@
-<div class="row m-5 justify-content-center">
+<div class="row justify-content-center">
   <div class="col-md-12 card p-0 col-md-8">
     <div class="card-header mb-2">
       Manager
