--- a/project/FE/src/app/question/update-question/update-question.component.html
+++ b/project/FE/src/app/question/update-question/update-question.component.html
@@ -1,6 +1,6 @@
 <div class="border">
   <nav class="navbar bg-title-list-quiz ">
-    <p class="m-auto heard">Add Question</p>
+    <p class="m-auto heard">Update Question</p>
   </nav>
   <form [formGroup]="formQuestion">
     <!--  Question code-->
