--- a/project/FE/src/app/user/statistical-user/statistical-user.component.html
+++ b/project/FE/src/app/user/statistical-user/statistical-user.component.html
@@ -2,12 +2,12 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-body p-2">Total
-        <span class="badge badge-pill badge-secondary float-right mt-1">{{totalUser}}</span>
+        <span class="badge badge-pill badge-secondary float-right mt-1 ">{{totalUser}}</span>
       </div>
     </div>
     <div class="card">
       <div class="card-body p-2">Newest
-        <span class="badge badge-pill badge-secondary float-right mt-1" >{{nameUser}}</span>
+        <span class="badge badge-pill badge-secondary float-right mt-1 pb-1 ">{{nameUser}}</span>
       </div>
     </div>
   </div>
