--- a/project/FE/src/app/login/components/auth-login/auth-login.component.html
+++ b/project/FE/src/app/login/components/auth-login/auth-login.component.html
@@ -21,7 +21,7 @@
         <div class="card">
           <div class="card-body p-2 text-center">Information:
              <div class="username-card">
-              
+
             </div>
             <div class="username-card">
               <a routerLink="detail-user">View details</a>
@@ -89,7 +89,7 @@
             </label>
           </div>
           <button type="submit" class="btn rounded mr-3 mt-3" [disabled]="loginForm.invalid">Sign in</button>
-          <button class="btn rounded mt-3">Register</button>
+          <button routerLink="/user-register" class="btn rounded mt-3">Register</button>
           <div *ngIf="loginForm.dirty && isLogInFailed" class="alert alert-danger p-1 mt-2">
             Account doesn't exist !
           </div>
