--- a/project/FE/src/app/user/list-user/list-user.component.html
+++ b/project/FE/src/app/user/list-user/list-user.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row mt-3 justify-content-center">
   <div class="col-md-12 card p-0 col-md-8">
     <div class="card-header mb-2">
       Manager
@@ -14,7 +14,7 @@
         <div class="dropdown col-md-2 align-self-center">
           <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button"
              id="dropdownMenuLink"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             data-toggle="dropdown" aria-haspopup="true"  aria-expanded="false">
             Member List
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
