--- a/project/FE/src/app/exam/get-exam/get-exam.component.html
+++ b/project/FE/src/app/exam/get-exam/get-exam.component.html
@@ -63,6 +63,6 @@
     </tbody>
   </table>
   <div>
-    <button class="btn btn-sm  rounded">Other exam questions</button>
+    <button class="btn btn-sm  rounded"><a href="">Other test </a></button>
   </div>
 </div>
