--- a/project/FE/src/app/app.component.html
+++ b/project/FE/src/app/app.component.html
@@ -102,7 +102,7 @@
             <li class="list-group-item">Member function 3</li>
             <li class="list-group-item">Member function 4</li>
           </ul>
-          
+
           <!-- Phần dưới này hiển thị phần chọn môn để làm bài test -->
           <!-- <div class="row d-flex justify-content-md-around mb-5">
             <div class="frames-img col-md-5 item-subject p-0">
@@ -136,8 +136,8 @@
             <pre>Please create new account or use your Gmail or Facebook</pre>
             <hr>
             <h3>Let's go !</h3>
-            <img src="https://s31450.pcdn.co/wp-content/uploads/2015/09/iStock_exam.150922.jpg" alt="cover.jpg">      
-          </div>  
+            <img src="https://s31450.pcdn.co/wp-content/uploads/2015/09/iStock_exam.150922.jpg" alt="cover.jpg">
+          </div>
         </ng-container>
       </ng-container>
       <router-outlet></router-outlet>
@@ -190,3 +190,47 @@
       </div>
     </div>
   </div>
+  <div class="row pt-4 custom-footer d-flex justify-content-center p-0 m-0">
+    <div class="col-md-4 pl-5">
+      <h3 class="mb-4">C0220H1 Company</h3>
+      <img class="logo-company" src="https://seeklogo.com/images/S/spring-logo-F6678FED25-seeklogo.com.png"
+        alt="logo.jpg">
+    </div>
+    <div class="col-md-4">
+      <h3 class="mb-4">Developers</h3>
+      <ul>
+        <li>Duong Tran Bao Long</li>
+        <li>Do Quoc Khanh</li>
+        <li>Phan Thi My Tinh</li>
+        <li>Dau Tuan Phuong</li>
+        <li>Vo Ngoc Quan</li>
+        <li>Le Thanh Tung</li>
+        <li>Dang Ngoc Minh Chau</li>
+        <li>Pham Anh Thien</li>
+      </ul>
+    </div>
+    <div class="col-md-4">
+      <h3 class="mb-4">Contact us</h3>
+      <a href="https://github.com/BaolongDNH01/Project_Front_End" target="_blank" rel="noopener noreferrer"
+        class="pl-4 icon-contact">
+        <i class="fa fa-3x fa-github" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/chubble.chubble.96" target="_blank" rel="noopener noreferrer"
+        class="pl-4 icon-contact">
+        <i class="fa fa-3x fa-facebook-square" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/chubble.chubble.96" target="_blank" rel="noopener noreferrer"
+        class="pl-4 icon-contact">
+        <i class="fa fa-3x fa-linkedin-square" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/chubble.chubble.96" target="_blank" rel="noopener noreferrer"
+        class="pl-4 icon-contact">
+        <i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/chubble.chubble.96" target="_blank" rel="noopener noreferrer"
+        class="pl-4 icon-contact">
+        <i class="fa fa-3x fa-instagram" aria-hidden="true"></i>
+      </a>
+    </div>
+  </div>
+</div>
